completed Anime Quoter

--- a/AnimeQuotes/index.html
+++ b/AnimeQuotes/index.html
@@ -16,9 +16,9 @@
           "I don't care if it is fortunate or unfortunate tha…ck for a person to
           be followed by a God of Death."
         </blockquote>
-        <span class="author">-Anonymous</span>
-        <button class="btn">NEXT</button>
+        <span class="author">-anonymous</span>
       </div>
+      <button class="btn">NEXT</button>
     </div>
   </body>
 </html>
